--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "firebase": "^6.4.0",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
+    "react-collapse": "^4.0.3",
     "react-dom": "^16.9.0",
+    "react-motion": "^0.5.2",
     "react-scripts": "3.1.1",
     "react-svg": "^10.0.18"
   },
