--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "emailjs-com": "^2.3.2",
     "firebase": "^6.4.0",
+    "i": "^0.3.6",
     "node-sass": "^4.12.0",
+    "npm": "^6.11.2",
     "react": "^16.9.0",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.9.0",
     "react-motion": "^0.5.2",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-svg": "^10.0.18"
   },
