--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-motion": "^0.5.2",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-router-hash-link": "^1.2.2",
     "react-scripts": "3.1.1",
     "react-svg": "^10.0.18"
   },
