--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "private": true,
   "dependencies": {
     "emailjs-com": "^2.3.2",
-    "firebase": "^6.4.0",
-    "i": "^0.3.6",
-    "node-sass": "^4.12.0",
-    "npm": "^6.11.2",
+    "firebase": "^9.6.10",
     "react": "^16.9.0",
     "react-collapse": "^4.0.3",
     "react-dom": "^16.9.0",
@@ -40,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.49.9"
   }
 }
